# ChangeLog for dev-libs/nanomsg
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/nanomsg/ChangeLog,v 1.12 2015/01/19 11:22:22 pinkbyte Exp $

  19 Jan 2015; Sergey Popov <pinkbyte@gentoo.org> nanomsg-0.5.ebuild:
  Add ~mips/~ppc/~ppc64/~s390 keywords, wrt bug #536804

  16 Nov 2014; Dirkjan Ochtman <djc@gentoo.org> -nanomsg-0.2.ebuild,
  -nanomsg-0.3.ebuild:
  Remove old versions of nanomsg

*nanomsg-0.5 (16 Nov 2014)

  16 Nov 2014; Dirkjan Ochtman <djc@gentoo.org> +nanomsg-0.5.ebuild:
  Version bump nanomsg to 0.5

*nanomsg-0.4 (11 Jun 2014)

  11 Jun 2014; Dirkjan Ochtman <djc@gentoo.org> +nanomsg-0.4.ebuild:
  Version bump nanomsg to 0.4

  30 Mar 2014; Dirkjan Ochtman <djc@gentoo.org> -nanomsg-0.1.ebuild:
  Remove old version.

*nanomsg-0.3 (30 Mar 2014)

  30 Mar 2014; Dirkjan Ochtman <djc@gentoo.org> +nanomsg-0.3.ebuild:
  Version bump nanomsg to 0.3.

  16 Jan 2014; Steev Klimaszewski <steev@gentoo.org> nanomsg-0.2.ebuild:
  Add ~arm keyword to nanomsg 0.2. All tests pass.

*nanomsg-0.2 (25 Sep 2013)

  25 Sep 2013; Dirkjan Ochtman <djc@gentoo.org> +nanomsg-0.2.ebuild:
  Version bump nanomsg to 0.2.

  20 Aug 2013; Dirkjan Ochtman <djc@gentoo.org> -nanomsg-20121207.ebuild:
  Remove old snapshot, which has stupid versioning.

*nanomsg-0.1 (20 Aug 2013)

  20 Aug 2013; Dirkjan Ochtman <djc@gentoo.org> +nanomsg-0.1.ebuild,
  metadata.xml:
  Add 0.1 release, add myself as maintainer.

  15 Jan 2013; Patrick Lauer <patrick@gentoo.org> nanomsg-20121207.ebuild:
  Fixing license #451516

*nanomsg-20121207 (07 Dec 2012)

  07 Dec 2012; Patrick Lauer <patrick@gentoo.org> +metadata.xml,
  +nanomsg-20121207.ebuild:
  Initial import, ebuild by me