@@ -4,17 +4,18 @@ Hash: SHA256
 DIST nanomsg-0.4-beta.tar.gz 608058 SHA256 ddc6dbadea9166405e04f6f1151605712085af3e771f62a772c0234e89010322 SHA512 51c4cec71ec541b14b45bc6c80365623a498240f13ffe73b08267b7695684351c77126fb324fc6d0a9b0210098e0f93d66f70468702faedafa6e2b254ff04c35 WHIRLPOOL c54aeb065cdd98e7e82a5c27e639d7b49c09438a87f11bf529f21f3b28e149d4e33699cd0627df28f39c6a8691604b48b98af42f4626ceb5b919568df28c0c65
 DIST nanomsg-0.5-beta.tar.gz 623927 SHA256 13bff7ae8f31957722ee62d50504ce1a0c590da908f8566f997e3e521abb089f SHA512 64bb658d80e94ec43e77b7a7c53a29e9b9cd02a7539e9c108b0bdfad8179af4202e11dcfdcb8400e3334931f61e59066fafe06c9df3bb4628dde6a047139ffe5 WHIRLPOOL 9b18a5b65d2ae321f112a5054fcfceda342c06a6745ba2eb8a4b4a64c40e0f47bc93b6da23202eeeef9b2992c842050cb53153293e79bda79f7b0aa86b26ca3d
 EBUILD nanomsg-0.4.ebuild 497 SHA256 50dd16f2588906d5e9cbfd37868bcbb2bf2de76a3c75601fc8eef1180c77a5fc SHA512 98bce76b7c8b1a64417392d008a4005229f7422aaba1de4a20b8b90e5d51e496ebdf6059c215ce83d6c7fdca1deebe4737192e34979ffed9ac811c2274f59f86 WHIRLPOOL a6586ad5517faf9ef20baeaa98c6af5319a62335f4ff26b37f1d40c1aa43bc458516a86b5188ca22193f7df773e1562bb4ecd6c8a7a573bad6b0a9f56c320e5e
+EBUILD nanomsg-0.5-r1.ebuild 1044 SHA256 53f870927f66a630fcc49657c2e8a6ad550ffbaeee8ed0af6efbe275e4d159ff SHA512 32fbc54b8bc410f0019369f0dbaafc424535752212545e88055514352c96f331a03e480f5d05d631fbd03673709709871fd3dd4c280ec50f51dc8509651aecdf WHIRLPOOL f5121f1bbabc959636d9030aa37ae2f83760d74c261ccf0f6fb32d19ec26dca9a678b42a0d6aa9e2a115701c1783a60b26a5ca111449f6d72f518c8032ea0b36
 EBUILD nanomsg-0.5.ebuild 526 SHA256 c2e314dcee7b26f451dfb3c8c64fc4acf0a46254fedf50e3443ddba3696b8277 SHA512 098427a7b24f378e4869f0a750d81681abe2eabdd1159e008b5a10e4550eca77caeb8494a4b7534e085ce3a363e88564852ad56db5724637f2962448052e5996 WHIRLPOOL b5046470663ddb7178310e043c9c269e63434e10d8c36c9f26ae407b718a600b0e2fb90e55a91cec5c06895dc64a079fe6c57897f4df81abe3aed862359c18a9
-MISC ChangeLog 1736 SHA256 c7e3dfac33033a3181ccbf8ea8640bdbf38c770adda188684bc4d27e4f17262f SHA512 791bfdd96893a4fb0a25e8ad30382b95d1ee6b6deb42d397bfbe36ce14b8db193795ab62fc42f9815bc43ec98e9d2feb74027ce8da488363fa954a3064791951 WHIRLPOOL b8dbc857d681d7efc1b377cd2a17f17f452f204f6b06fa58e3f7029e5ba5a2913cdc53bcda2f5cdfbf5143c1410a9d4f035d9d170f5dc6372d63d02bc55695a5
+MISC ChangeLog 1951 SHA256 8f704bc2f05af4caddd2eb8e8fe6d0a7ad961b2d722b3b25095e4c5451d235f7 SHA512 e13934117e38d9f67865429012ca77a19aeeb46ad9d1d897c47a69cf2b54dbb50f375bb445793e5037ba81d3581165fe6e61a8ecbf36d82500b3b71421829327 WHIRLPOOL a300eee83256d479957ee946791946634842e074a39ef6cc84c3a60ba73dd9bb83fcc75bb02518ab60f04cd7aaaf2c46ba3f049c3b753803f99a6f11abf62a0f
 MISC metadata.xml 325 SHA256 6c54527feeff10ab588263e0ccbcfbb8b4839d612344ca2cf3e1038a0096ce7b SHA512 0d9b321214aba90ecb22914787649f08bfa590d62195893ffe2830ed31a1fec266f615e51cbf5c34f1dbd541f536d16c00aadc68defede68f03733a4b18b89d3 WHIRLPOOL fa3616d2a59bda5a0e8950fc6c75a0f80f4d6c1290947acec4386f57d9d6b58039d0e3b663e53b5fc3e2419fd8798b02e9d06b9acb6868d00015a649be8956fb
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQEcBAEBCAAGBQJUvOjuAAoJECo/aRed9267skAIAMnw5NnEQNCQZhQ8+fsD80mG
-/rtoGVgCzIMUwwsFnvZaappySN/Q6AnrJWCx6t2fnSnlJb85U36g5gdHRVmDD/1e
-nqkAmejCzLYQb2Y9qdZ0P/lHsHLul9hn8m1/TVRFVPoInUe7ApMTbeFTc0dXAd0M
-CFAK0sns79/IDTMrpYzEfXnD+vEYaI6PfDFG3LYa3WKFR4GIYCdIwEpvYl6JY2zP
-poCjyKt1lCBsAh11nlDuicwHC8vGsqquUYnb3oit8WEPqkF7kjkRspj5a1jPXWYK
-bPrxQi8YEiwL8Ug0RSUeR6LPr8KzuRgzC5KWITfzSFpFLOVR5wKsd6B1mmGZ32s=
-=hJek
+iQEcBAEBCAAGBQJUy0LyAAoJECo/aRed9267vFsH/1gnMf95dMugbSC9B7uiuwaL
+Cf8Jj4CrEP3b0TvMQ0FjDDXT0+36eNR0kqRYpnS59NPh2UIndOOsdxubdklTTB3K
+4sPnergZZq8xBlaLBVh8xV0geCM0BMSsngvz3sSybGYrboWZc83y0vhY09yZ3jfc
+8hRd0rzSn0IxMxcu5Y0EXP32avH9QIUTXq9kk0YTpRjRcbq1LEtvmpj46XTQ0tWo
+3R+2sg9kmjlihUhDovqr7WUNBF6p/BDhEtcyQFZCXcJSrfR7dI2A44VgHYtLEeK2
+zMeJlPA//Wli9/t9NTDjdT2NPdEPslOO90GYU5Hmyhl9me6FXc7ioKg3fncCiN0=
+=J0lQ
 -----END PGP SIGNATURE-----
