@@ -1,6 +1,12 @@
 # ChangeLog for dev-libs/nanomsg
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/nanomsg/ChangeLog,v 1.12 2015/01/19 11:22:22 pinkbyte Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/nanomsg/ChangeLog,v 1.13 2015/01/30 08:38:10 pinkbyte Exp $
+
+*nanomsg-0.5-r1 (30 Jan 2015)
+
+  30 Jan 2015; Sergey Popov <pinkbyte@gentoo.org> +nanomsg-0.5-r1.ebuild:
+  Revision bump: use multilib-aware eclasses, wrt bug #537038. Build and
+  install manpages, wrt bug #526258
 
   19 Jan 2015; Sergey Popov <pinkbyte@gentoo.org> nanomsg-0.5.ebuild:
   Add ~mips/~ppc/~ppc64/~s390 keywords, wrt bug #536804
